--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <li>Docker: criando</li>
         <li>Ansible</li>
         <li>Integração Contínua</li>
+		<li>Vagrant</li>
     </ul>
 </body>
 </html>
