--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li>Vagrant</li>
         <li>Docker: criando</li>
-        <li>Ansible: infra como codigo</li>
+        <li>Ansible</li>
         <li>Integração Contínua</li>
 		<li>Vagrant</li>
 		<li>novo</li>
