alterando o curso de kubernetes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li>Integração Contínua</li>
 		<li>Vagrant</li>
 		<li>novo</li>
-		<li>Kubernetes</li>
+		<li>Kubernetes: Introdução a orquestração</li>
     </ul>
 </body>
 </html>
