trocando ul por dl e separando os titulos

--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 <h1>O curso de devops</h1>
 
 
-    <ul>
-        <li>Vagrant</li>
-        <li>Docker</li>
-        <li>Ansible</li>
-        <li>Integração Contínua</li>
-    </ul>
+    <dl>
+		<dt>Vagrant</dt>
+        <dd>Gernciando VM</dd>
+        <dt>Docker</dt>
+		<dd>Criando container</dd>
+        <dt>Ansible</dt>
+		<dd>Sua infra como codigo</dd>
+        <dt>Integração Contínua</dt>
+		<dd>Maturidade no desenvolvimento</dd>
+		
+    </dl>
 </body>
 </html>
