--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cursos da Alura</title>
+    <title>Cursos da Alura de devops</title>
 </head>
 <body>
 <h2>O curso de devops</h2>
