--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lista de Cursos</title>
+
+    <title>Cursos da Alura</title>
+
 </head>
 <body>
 <h2>O curso de devops</h2>
