cursos de ec2 e s3

--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
 		<dd>Maturidade no desenvolvimento</dd>
 		
     </dl>
+	
+	<h2>Cursos de Cloud</h2>
+	    <dl>
+        <dt>Amazon EC2</dt>
+		<dd>Faça um deploy</dd>
+		
+        <dt>Amazon S3</dt>
+		<dd>Manipule e armazene</dd>
+		
+    </dl>
+
 
 </body>
 </html>
