cursos de beanstalk e ecs

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
         <dt>Amazon S3</dt>
 		<dd>Manipule e armazene</dd>
 		
+		<dt>Amazon Elastic Beanstalk</dt>
+		<dd>container docker</dd>
+		
+		<dt>Amazon ECS</dt>
+		<dd>gerencie docker</dd>
+		
     </dl>
 
 
