cursos de Linux I E II

--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
 		<dd>Maturidade no desenvolvimento</dd>
 		
     </dl>
+	
+	
+	
+	
+	<h2>Curso de linux</h2>
+
+
+    <dl>
+		<dt>Linux I</dt>
+        <dd>Conhecendo</dd>
+		
+        <dt>Linux II</dt>
+		<dd>Programas</dd>
+		
+    </dl>
 
 </body>
 </html>
