corrigindo bug - cursos de shell

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
         <dt>Linux II</dt>
 		<dd>Programas</dd>
 		
+		<dt>Shell Script</dt>
+		<dd>começando seus scripts</dd>
+		
+		<dt>Shell Script II</dt>
+		<dd>Seus scripts</dd>
+		
     </dl>
 
 	<h2>Cursos de Cloud</h2>
