alterando titulo do curso de linux

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		
     </dl>
 	
-	<h2>Curso de linux</h2>
+	<h2>Curso do SO linux</h2>
     <dl>
 		<dt>Linux I</dt>
         <dd>Conhecendo</dd>
